# bskim-lotto-prediction

./: .gitignore  CLAUDE.md  README.md
backend/: .gitignore  pyproject.toml  run.py
backend/app/: config.py  crawler.py  database.py  main.py  models.py  naver_source.py  scheduler.py  schemas.py
backend/app/dream/: analyzer.py  generator.py  searcher.py  state.py  word_mappings.json
backend/app/prediction/: config.py  ensemble.py  montecarlo.py  predictor.py
backend/app/prediction/analyzer/: delay.py  frequency.py  hot_cold.py  pattern.py
backend/app/prediction/strategies/: balanced_range.py  cold_return.py  golden_combo.py  pair_affinity.py  pure_random.py
backend/app/routers/: crawl.py  dashboard.py  dream.py  predict.py  seo.py
backend/scripts/: seed_from_github.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: robots.txt  site.webmanifest  sitemap.xml
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: AltStrategies.jsx  Dashboard.jsx  DreamLottoPanel.jsx  LottoBall.jsx  PredictionPanel.jsx  ResultsBrowser.jsx  SiteFooter.jsx
frontend/src/routes/: AboutPage.jsx  PrivacyPage.jsx  RoundDetailPage.jsx  TermsPage.jsx
work_order/: task1_collenct_number.md  task2_prediction.md  task3_dream_lotto.md  task4_deployment.md
